fix quotes having no contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,7 @@
 
     --radius: 0.5rem;
 
-    --tw-prose-body: #000000;
+    /* --tw-prose-body: #000000; */
   }
 }
 
@@ -69,7 +69,7 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
 
-    --tw-prose-body: #ffffff;
+    /* --tw-prose-body: #ffffff; */
   }
 }
 
